--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
               <i class="material-icons">menu</i>
           </a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a class="waves-effect" href="https://www.instagram.com/qomovirus/">Instagram</a></li>
-              <li><a class="waves-effect" href="https://www.facebook.com/qomovirus/">Facebook</a></li>
-              <li><a class="waves-effect" href="https://www.youtube.com/qomovirus">Youtube</a></li>
-              <li><a class="waves-effect" href="https://giphy.com/channel/qomovirus">Giphy</a></li>
+            <li><a class="waves-effect" href="https://www.instagram.com/qomovirus/" target="_blank">Instagram</a></li>
+              <li><a class="waves-effect" href="https://www.facebook.com/qomovirus/" target="_blank">Facebook</a></li>
+              <li><a class="waves-effect" href="https://www.youtube.com/qomovirus" target="_blank">Youtube</a></li>
+              <li><a class="waves-effect" href="https://giphy.com/channel/qomovirus" target="_blank">Giphy</a></li>
           </ul>
           <ul class="right sidenav" id="menu-responsive">
-              <li><a class="waves-effect" href="https://www.instagram.com/qomovirus/">Instagram</a></li>
-              <li><a class="waves-effect" href="https://www.facebook.com/qomovirus/">Facebook</a></li>
-              <li><a class="waves-effect" href="https://www.youtube.com/qomovirus">Youtube</a></li>
-              <li><a class="waves-effect" href="https://giphy.com/channel/qomovirus">Giphy</a></li>
+              <li><a class="waves-effect" href="https://www.instagram.com/qomovirus/" target="_blank">Instagram</a></li>
+              <li><a class="waves-effect" href="https://www.facebook.com/qomovirus/" target="_blank">Facebook</a></li>
+              <li><a class="waves-effect" href="https://www.youtube.com/qomovirus" target="_blank">Youtube</a></li>
+              <li><a class="waves-effect" href="https://giphy.com/channel/qomovirus" target="_blank">Giphy</a></li>
           </ul>
         </div>
     </nav>
@@ -157,10 +157,10 @@
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Sígueme</h5>
             <ul>
-              <li><a class="white-text" href="https://www.instagram.com/qomovirus/">Instagram</a></li>
-              <li><a class="white-text" href="https://www.facebook.com/qomovirus/">Facebook</a></li>
-              <li><a class="white-text" href="https://www.youtube.com/qomovirus">Youtube</a></li>
-              <li><a class="white-text" href="https://giphy.com/channel/qomovirus">Giphy</a></li>
+              <li><a class="white-text" href="https://www.instagram.com/qomovirus/" target="_blank">Instagram</a></li>
+              <li><a class="white-text" href="https://www.facebook.com/qomovirus/" target="_blank">Facebook</a></li>
+              <li><a class="white-text" href="https://www.youtube.com/qomovirus" target="_blank">Youtube</a></li>
+              <li><a class="white-text" href="https://giphy.com/channel/qomovirus" target="_blank">Giphy</a></li>
             </ul>
           </div>
         </div>
