--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="parallax">
-                <img src="images/qomovirus-fondo-banner.png" alt="">
+                <img class="responsive-img" src="images/qomovirus-fondo-banner.png" alt="">
             </div>
         </div>
     </div>
@@ -140,8 +140,7 @@
         </div>
 
     <br>
-      <br>
-       <h1 class="center">Sígueme en instagram<br><br><a class="link-insta" href="https://www.instagram.com/qomovirus/" target="_blank">@qomovirus</a></h1>
+       <h1 class="title-insta center">Sígueme en instagram<br><br><a class="link-insta" href="https://www.instagram.com/qomovirus/" target="_blank">@qomovirus</a></h1>
        <br>
        <br>
        <br>
