--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="parallax">
-                <img class="responsive-img" src="images/qomovirus-fondo-banner.png" alt="">
+                <img src="images/qomovirus-fondo-banner-1.png" alt="">
             </div>
         </div>
     </div>
