--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
                         <a class="btn-large waves-effect waves-light" href="https://api.whatsapp.com/send?phone=51986764140" target="_blank">CONTÁCTAME</a>
                 </div>
             </div>
-            <div class="parallax">
-                <img src="images/qomovirus-fondo-banner-1.png" alt="">
+            <div class="parallax hide-on-med-and-down">
+                <img src="images/qomovirus-fondo-banner-l.jpg" alt="">
+            </div>
+            <div class="parallax hide-on-large-only show-on-medium hide-on-small-only">
+                <img src="images/qomovirus-fondo-banner-m.jpg" alt="">
+            </div>
+            <div class="parallax hide-on-med-and-up show-on-small">
+                <img src="images/qomovirus-fondo-banner-s.jpg" alt="">
             </div>
         </div>
     </div>
