--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <img class="responsive-img" src="images/qomovirus-logo-banner.png" alt="">
                             </div>
                         </div>
-                        <a class="btn-large waves-effect waves-light" href="https://api.whatsapp.com/send?phone=51986764140" target="_blank">CONTÁCTAME</a>
+                        <a class="btn-large waves-effect waves-light" href="https://github.com/jxnder/images" target="_blank">SALVAPANTALLAS</a>
                 </div>
             </div>
             <div class="parallax hide-on-med-and-down">
